--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>groupId</groupId>
     <artifactId>20200307JavaFXProductsFromMarketPlace</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
@@ -23,6 +24,8 @@
     </dependencies>
 
     <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
